--- a/client/src/components/animacion.css
+++ b/client/src/components/animacion.css
@@ -2,3 +2,50 @@
     background-color: red;
     color: red;
 }
+
+.transition-1 {
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 101;
+    background-color: #D34D4C;
+    opacity: 0;
+    pointer-events: none;
+    transition: 0.5s ease-out;
+}
+
+.transition-1.is-active {
+    opacity: 1;
+    pointer-events: all;
+}
+
+.transition-2 {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    bottom: 0;
+    z-index: 101;
+    background-color: #D34D4C;
+    transition: 0.5s ease-out;
+}
+
+.transition-2.is-active {
+    left: 0px;
+}
+.transition-2::before {
+    position: fixed;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    bottom: 0;
+    z-index: 101;
+    background-color: #D34D4C;
+    transition: 0.5s ease-out;
+}
+
+.transition-2.is-active::before {
+    left: 0px;
+}
