--- a/client/src/components/animacion.css
+++ b/client/src/components/animacion.css
@@ -49,3 +49,19 @@
 .transition-2.is-active::before {
     left: 0px;
 }
+
+#placeholder {
+    width: 100vw;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    z-index: 1030;
+    background-color: #71c4c8;
+  }
+  #placeholder .d-flex {
+    width: 100%;
+    height: 100%;
+  }
+  #placeholder .d-flex .text-normal{
+    color: #f24c4b;
+  }
